Fix overflow bug on map.

--- a/web/assets/css/global.css
+++ b/web/assets/css/global.css
@@ -31,7 +31,8 @@ p {
 
 #container {
   margin: 0 auto;
-  width: 100%; }
+  width: 100%;
+  overflow: hidden; }
 
 header {
   margin: 0 0 40px;
